--- a/src/app/pages/word-structures/components/learn/learn.component.html
+++ b/src/app/pages/word-structures/components/learn/learn.component.html
@@ -1,5 +1,5 @@
 <!-- <section class="learn" *ngIf="wsData$ | async as wsData"> -->
-<section class="learn" *ngIf="wsData$ | async as wsData">
+<section class="learn" *ngIf="wsData">
   <h1 [innerHtml]="wsData.display" class="learn__headline margin">
     <!-- Many actions words just add <span class="suffix">ed</span> and
     <span class="suffix">ing</span> to the base word without making any other
@@ -24,7 +24,13 @@
     (click)="updateIndex('forward', wsData.wordList.length)"
   ></button>
   <div class="learn-word-container margin">
-    <p class="learn-word" *ngFor="let word of wsData.wordList[index].words">
+    <p
+      #wordHTML
+      class="learn-word"
+      *ngFor="let word of wsData.wordList[index].words; let i = index"
+      [ngClass]="{ animateLetter: audio[i].animate }"
+      (click)="play(wordHTML)"
+    >
       {{ word }}
     </p>
   </div>
