--- a/src/app/pages/word-structures/components/learn/learn.component.css
+++ b/src/app/pages/word-structures/components/learn/learn.component.css
@@ -59,6 +59,6 @@
 }
 
 .animateLetter {
-  transition: all 0.5s linear;
+  transition: all 0.5s ease-in-out;
   transform: scale(2.12) !important;
 }
